CallWindow: destroy the preview clone when restarting the pipeline

https://bugzilla.gnome.org/show_bug.cgi?id=656886